[package]
name = "subscribers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes"] }
safe_drive = { path = "/home/yuukitakano/program/safe_drive" }
